--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 .vs/Muntinlupa Bus E-Wallet/v17/DocumentLayout.json
 .vs/Muntinlupa Bus E-Wallet/v17/.suo
 
+.vs/Muntinlupa-Bus-E-Wallet/FileContentIndex/ae25f929-cb3c-469a-925b-22bc66a8c549.vsidx
+.vs/Muntinlupa-Bus-E-Wallet/FileContentIndex/f3ab492d-b777-4054-b6d5-3346031f2669.vsidx
+.vs/Muntinlupa Bus E-Wallet/FileContentIndex/41502364-fcb2-495a-85b0-462a763982ca.vsidx
+.vs/Muntinlupa-Bus-E-Wallet/v17/.wsuo
+.vs/slnx.sqlite
+Muntinlupa Bus E-Wallet/obj/Release/Muntinlupa Bus E-Wallet.csproj.AssemblyReference.cache
