--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 .vs/Muntinlupa-Bus-E-Wallet/v17/.wsuo
 .vs/slnx.sqlite
 Muntinlupa Bus E-Wallet/obj/Release/Muntinlupa Bus E-Wallet.csproj.AssemblyReference.cache
+Muntinlupa Bus E-Wallet/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+.vs/Muntinlupa Bus E-Wallet/FileContentIndex/06a314ae-fb0f-4d08-80e0-116872e7ad82.vsidx
+.vs/Muntinlupa Bus E-Wallet/FileContentIndex/accc86db-a351-4264-8cb1-12332d6d1731.vsidx
+Muntinlupa Bus E-Wallet/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
