--- a/Muntinlupa Bus E-Wallet/Muntinlupa Bus E-Wallet.csproj
+++ b/Muntinlupa Bus E-Wallet/Muntinlupa Bus E-Wallet.csproj
@@ -58,6 +58,7 @@
     <Compile Include="CardTap.Designer.cs">
       <DependentUpon>CardTap.cs</DependentUpon>
     </Compile>
+    <Compile Include="CardTapping.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="CustomerAccount.cs" />
     <Compile Include="DeactivateAccountForm.cs">
